--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,7 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
-    }
+    buildFeatures.dataBinding = true
 }
 
 dependencies {
@@ -40,6 +38,9 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
+
+    // koin
+    implementation "org.koin:koin-android-viewmodel:2.1.5"
 
     // Testing
     testImplementation 'junit:junit:4.13'
