--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    // Design
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'in.seunghyun:slush:1.2.1'
+
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
