--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     // Design
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'in.seunghyun:slush:1.2.1'
+    implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
