--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     // koin
     implementation "org.koin:koin-android-viewmodel:2.1.5"
 
+    // AAC
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
     // Testing
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
